--- a/.travis.yml
+++ b/.travis.yml
@@ -1,3 +1,9 @@
 language: java
 jdk:
  - oraclejdk8
+services:
+  - mysql
+before_install:
+  - mysql -u root --password="1234" < travis.sql
+script:
+  - mvn install -DskipTests
