--- a/.travis.yml
+++ b/.travis.yml
@@ -4,6 +4,6 @@ jdk:
 services:
   - mysql
 before_install:
-  - mysql -u root --password="1234" < travis.sql
+  - mysql -u root --password="" < travis.sql
 script:
   - mvn install -DskipTests
