deloy build file to localhsot tomcat

--- a/.travis.yml
+++ b/.travis.yml
@@ -5,5 +5,7 @@ services:
   - mysql
 before_install:
   - mysql -u root --password="" < src/test/java/com/sysco/ordermanager/travis.sql
-script:
+install:
   - mvn install -DskipTests
+script:
+  - mvn spring-boot:run
