--- a/.travis.yml
+++ b/.travis.yml
@@ -7,9 +7,7 @@ before_install:
   - mysql -u root --password="" < src/test/java/com/sysco/ordermanager/travis.sql
 install:
   - mvn install -DskipTests
-jobs:
-  include:
-    - stage: test
-      script: mvn  test
-    - stage: deploy
-      script: mvn spring-boot:run
+script:
+  -  mvn  test
+  -  mvn spring-boot:run
+    
